<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#1006517B"
    tools:context=".Login">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:background="#1006517B"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:background="@drawable/top_banner"
            android:contentDescription="@string/logo_banner" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="163dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="25dp"
            android:contentDescription="@string/logo_description"
            android:src="@drawable/logo" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/username_layout"
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:errorIconDrawable="@drawable/icons8_database_error_24"
            app:startIconDrawable="@drawable/icons8_user_male_30">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username_tiet"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:endIconMode="clear_text"
            app:errorEnabled="true"
            app:errorIconDrawable="@drawable/icons8_database_error_24"
            app:startIconDrawable="@drawable/icons8_password_30">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_tiet"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/signup"
            android:layout_width="213dp"
            android:layout_height="33dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:backgroundTint="#1006517B"
            android:text="@string/no_account"
            android:textColor="@color/black"
            android:textSize="11sp"
            android:visibility="visible" />

        <ImageButton
            android:id="@+id/login"
            android:layout_width="218dp"
            android:layout_height="87dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_button"
            android:contentDescription="@string/login_button_description" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>